# pdf-ocr

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  __init__.py  coords_config.json  create_sample_pdf.py  pdf_ocr.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-github-packages.yml  publish.yml
