[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-ocr"
version = "2.0.0"
description = "نرم‌افزار هوشمند استخراج اطلاعات از فایل‌های PDF اظهارنامه"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Seyed Mahdi Vakhshoori", email = "seyedmahdivakhshoori@gmail.com"}
]
maintainers = [
    {name = "Seyed Mahdi Vakhshoori", email = "seyedmahdivakhshoori@gmail.com"}
]
keywords = ["pdf", "ocr", "openai", "chatgpt", "persian", "farsi", "invoice", "extraction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business :: Financial",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Environment :: X11 Applications :: Qt",
]
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
    "pandas>=1.5.0",
    "PyPDF2>=3.0.0",
    "PyQt6>=6.4.0",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.0.0",
    "reportlab>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/seyedmahdivakhshoori/pdf-ocr"
Documentation = "https://github.com/seyedmahdivakhshoori/pdf-ocr#readme"
Repository = "https://github.com/seyedmahdivakhshoori/pdf-ocr"
"Bug Tracker" = "https://github.com/seyedmahdivakhshoori/pdf-ocr/issues"

[project.scripts]
pdf-ocr = "pdf_ocr:main"

[tool.setuptools.packages.find]
include = ["*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.pdf", "fonts/*.ttf", "fonts/*.otf"] 